# pdfium_dart

./: .gitignore  .metadata  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: pubspec.yaml
example/android/app/src/main/: AndroidManifest.xml
example/lib/: main.dart
example/linux/flutter/: generated_plugins.cmake
example/windows/flutter/: generated_plugins.cmake
lib/: pdfium_dart.dart
lib/bind/: pdfium_bindings.dart
lib/src/: pdfium.dart  pdfium_visualizer.dart
linux/: CMakeLists.txt
src/: CMakeLists.txt  dummy.c  pdfium_wrapper.c  pdfium_wrapper.h
